--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 
 <router-outlet></router-outlet>
-<app-about></app-about>
+<app-header></app-header>
+<app-contact-us></app-contact-us>
+<app-footer></app-footer>
